--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body class="page page--gray page--main">
-  <div id="root"></div>
+  <div id="root" class="main">
+
+  </div>
   <script src="bundle.js"></script>
 </body>
 </html>
