--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>6 cities</title>
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    .cities__place-card:hover {
+      opacity: 0.6;
+    }
+</style>
 </head>
 
 <body class="page page--gray page--main">
